# rpi-snailshell

./: .env  .gitignore  Makefile  README.md  model_loader.py  pipeline.py  pyproject.toml  requirements.txt  test_argparse.py  timelaps.py
.github/workflows/: ci.yml  notification.yaml
cd/: client.py
docs/: README-dev.md
examples/: test_video.mov
snailshell/: main.py  main_test.py  model_class.py  model_loader.py  pipeline.py
snailshell/adapters/: base.py
snailshell/frame_loader/: base.py  opencv_backend.py  opencv_backend_test.py  picamera_backend.py
snailshell/model_loader/: mobilenet.py  resnet.py
snailshell/models/: mobilenet.py
snailshell/models/model-ai-sink-run/: config.json
snailshell/pipelines/: DataExtraction.py  UploadLake.py  base.py
snailshell/tools/: datalakeuploader.py  modeldownloader.py  modelupdate.py  uploadlake.py
snailshell/utils/: port.py
